--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,8 @@
 *.userprefs
 
 # Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
+[Dd]ebug*/
+[Rr]elease*/
 x64/
 x86/
 bld/
